# jackal_exploration

./: CMakeLists.txt  README.md  package.xml  remote-jackal.sh
launch/: control.launch  description.launch  gmapping_demo.launch  jackal_exploration.launch  jackal_setup.launch  jackal_world.launch  keyboard_teleop.launch  point2laser.launch  pointcloud_filter.launch  teleop.launch  twist_mux.launch  velodyne_startup.launch  view_robot.launch
launch/include/: gmapping.launch  move_base.launch
params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml  robot_localization.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
rviz/: lidar.rviz
src/: explore.py  gridcalc.py  z_correction.py
urdf/: VLP-16.urdf.xacro  jackal.urdf.xacro
