<?xml version="1.0"?>
<package>
  <name>jackal_exploration</name>
  <version>0.0.0</version>
  <description>The jackal_exploration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mikewiz@todo.todo">mikewiz</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/jackal_exploration</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend> -->

  <!-- For PCL ROS -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>nodelet_topic_tools</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <!-- <build_depend>tf2_eigen</build_depend> -->

  <!-- For Pointcloud to Laserscan -->
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <!-- For Twist Mux -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <!-- For Velodyne Pointcloud -->
  <build_depend>angles</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>velodyne_driver</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <!-- For Velodyne Driver -->
  <build_depend>libpcap</build_depend>

  <!-- For Interactive Markers -->
  <build_depend>interactive_markers</build_depend>

  <!-- For Jackal Navigation -->
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <!-- For Jackal Control -->
  <run_depend>controller_manager</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>
  <run_depend>topic_tools</run_depend>

  <!-- For Jackal Description -->
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>pointgrey_camera_description</run_depend>

  <!-- For Jackal Msgs -->
  <run_depend>message_runtime</run_depend>

  <!-- For Jackal Desktop -->
  <run_depend>jackal_msgs</run_depend>
  <run_depend version_gte="0.3.1">jackal_viz</run_depend>

  <!-- For Jackal Viz -->
  <run_depend version_gte="0.5">jackal_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <!-- For Jackal Gazebo -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend version_gte="0.5">jackal_control</run_depend>
  <run_depend version_gte="0.5">jackal_description</run_depend>

  <!-- For Jackal Simulator -->
  <run_depend version_gte="0.3">jackal_gazebo</run_depend>

  <!-- For PCL ROS -->
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>nodelet_topic_tools</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <!-- <run_depend>tf2_eigen</run_depend> -->

  <!-- For Pointcloud to Laserscan -->
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- For Velodyne Description -->
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <!-- For Twist Mux -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>twist_mux_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>

  <!-- For Velodyne Pointcloud -->
  <run_depend>angles</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>velodyne_driver</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>velodyne_laserscan</run_depend>

  <!-- For Velodyne Driver -->
  <run_depend>libpcap</run_depend>

  <!-- For Interactive Markers -->
  <run_depend>interactive_markers</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

    <!-- For Jackal Gazebo -->
    <!-- <gazebo_ros gazebo_media_path="${prefix}"/> -->

    <!-- For PCL ROS -->
    <!-- <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_features.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_filters.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_io.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_segmentation.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_surface.xml"/> -->

    <!-- For Pointcloud to Laserscan -->
    <!-- <nodelet plugin="${prefix}/nodelets.xml"/> -->

    <!-- For Velodyne Driver -->
    <!-- <nodelet plugin="${prefix}/nodelet_velodyne.xml"/> -->

    <!-- For Twist Mux -->
    <!-- <rosindex>
      <tags>
        <tag>control</tag>
        <tag>twist</tag>
        <tag>cmd_vel</tag>
        <tag>multiplex</tag>
        <tag>mux</tag>
      </tags>
    </rosindex> -->
  </export>
</package>
